content: migrate key details (phone, email, address) and expand products per live site

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       <div class="container narrow">
         <h1>Request a Free Quote</h1>
         <p class="lead">Share a few details and we’ll get back to you shortly.</p>
-        <form class="form" method="post" action="mailto:hello@blindsfactory.ca" enctype="text/plain">
+        <form class="form" method="post" action="mailto:info@blindsfactory.ca" enctype="text/plain">
           <div class="grid-2">
             <label>Full Name<input required name="name" autocomplete="name" /></label>
             <label>Phone<input required name="phone" autocomplete="tel" /></label>
@@ -47,9 +47,9 @@
           <label>Details<textarea name="details" rows="5" placeholder="Window count, rough sizes, room types, timing…"></textarea></label>
           <div class="actions">
             <button class="btn primary" type="submit">Send Request</button>
-            <a class="btn ghost" href="tel:+10000000000">Call Instead</a>
+            <a class="btn ghost" href="tel:+14375002209">Call Instead</a>
           </div>
-          <p class="small">Prefer email? Write to <a href="mailto:hello@blindsfactory.ca">hello@blindsfactory.ca</a>.</p>
+          <p class="small">Prefer email? Write to <a href="mailto:info@blindsfactory.ca">info@blindsfactory.ca</a>.</p>
         </form>
       </div>
     </main>
@@ -62,4 +62,3 @@
     </footer>
   </body>
   </html>
-
