--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
     <footer class="site-footer">
       <div class="container row between top">
         <div><img src="/assets/images/logo.svg" alt="Blinds Factory" width="132" height="28" /><p class="small">© <span id="year"></span> Blinds Factory</p></div>
-        <div><h4>Contact</h4><ul class="list"><li><a href="tel:+10000000000">+1 (000) 000‑0000</a></li><li><a href="mailto:hello@blindsfactory.ca">hello@blindsfactory.ca</a></li></ul></div>
+        <div><h4>Contact</h4><ul class="list"><li><a href="tel:+14375002209">+1 (437) 500‑2209</a></li><li><a href="mailto:info@blindsfactory.ca">info@blindsfactory.ca</a></li></ul></div>
       </div>
       <script src="/assets/js/main.js" defer></script>
     </footer>
