--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Blinds Factory | Custom Blinds & Shades in the GTA</title>
-    <meta name="description" content="Custom blinds, shades, shutters, and motorized window coverings. Free in-home consultation. Proudly serving the Greater Toronto Area." />
+    <title>Custom Blinds Toronto - Free Consultation | Blinds Factory</title>
+    <meta name="description" content="Shop custom zebra, roller, Shangri-La, honeycomb, roman blinds and shutters. Free consultations and professional installation across the GTA." />
     <meta name="theme-color" content="#0a2540" />
     <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml" />
     <link rel="manifest" href="/manifest.webmanifest" />
@@ -20,13 +20,14 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Blinds Factory",
-        "url": "https://www.blindsfactory.ca/",
-        "image": "/assets/images/og-cover.webp",
-        "telephone": "+1-000-000-0000",
+        "url": "https://blindsfactory.ca/",
+        "image": "/assets/images/hero.svg",
+        "telephone": "+1-437-500-2209",
         "address": {
           "@type": "PostalAddress",
-          "addressLocality": "Toronto",
-          "addressRegion": "ON",
+          "streetAddress": "767 Creditstone Rd, Concord, ON L4K 4P5, Canada",
+          "addressLocality": "Concord",
+          "addressRegion": "Vaughan",
           "addressCountry": "CA"
         },
         "areaServed": "Greater Toronto Area",
@@ -58,11 +59,11 @@
       <section class="hero">
         <div class="container grid-2">
           <div>
-            <h1>Custom Blinds & Shades, Made for Your Home</h1>
-            <p class="lead">Beautiful, durable, and measured-to-fit window coverings. Free in-home consultations across the GTA.</p>
+            <h1>Custom Blinds for Toronto Homes</h1>
+            <p class="lead">Zebra, roller, Shangri‑La, honeycomb, roman, shutters, and motorized. Free in‑home consultation and professional installation.</p>
             <div class="actions">
               <a class="btn primary" href="/contact.html">Get a Free Quote</a>
-              <a class="btn ghost" href="tel:+10000000000">Call Now</a>
+              <a class="btn ghost" href="tel:+14375002209">Call Now</a>
             </div>
             <ul class="trust">
               <li>• Professional measurement & installation</li>
@@ -99,6 +100,26 @@
               <img src="/assets/images/shutters.svg" alt="Shutters" loading="lazy" width="320" height="220" />
               <h3>Shutters</h3>
               <p>Timeless look with excellent durability.</p>
+            </a>
+            <a class="card" href="/products/honeycomb.html">
+              <img src="/assets/images/roller.svg" alt="Honeycomb Shades" loading="lazy" width="320" height="220" />
+              <h3>Honeycomb</h3>
+              <p>Energy‑efficient cellular shades for insulation.</p>
+            </a>
+            <a class="card" href="/products/roman.html">
+              <img src="/assets/images/roller.svg" alt="Roman Shades" loading="lazy" width="320" height="220" />
+              <h3>Roman Shades</h3>
+              <p>Soft fabric folds for an elegant finish.</p>
+            </a>
+            <a class="card" href="/products/shangri-la.html">
+              <img src="/assets/images/zebra.svg" alt="Shangri-La Shades" loading="lazy" width="320" height="220" />
+              <h3>Shangri‑La</h3>
+              <p>Sheer vanes that float between fabric layers.</p>
+            </a>
+            <a class="card" href="/products/galaxy.html">
+              <img src="/assets/images/roller.svg" alt="Galaxy Shades" loading="lazy" width="320" height="220" />
+              <h3>Galaxy</h3>
+              <p>Premium fabrics with refined light control.</p>
             </a>
           </div>
         </div>
@@ -163,9 +184,17 @@
         <div>
           <h4>Contact</h4>
           <ul class="list">
-            <li><a href="tel:+10000000000">+1 (000) 000‑0000</a></li>
-            <li><a href="mailto:hello@blindsfactory.ca">hello@blindsfactory.ca</a></li>
-            <li><a href="https://maps.google.com" target="_blank" rel="noopener">Toronto, ON</a></li>
+            <li><a href="tel:+14375002209">+1 (437) 500‑2209</a></li>
+            <li><a href="mailto:info@blindsfactory.ca">info@blindsfactory.ca</a></li>
+            <li><a href="https://maps.google.com/?q=767+Creditstone+Rd,+Concord,+ON+L4K+4P5" target="_blank" rel="noopener">767 Creditstone Rd, Concord, ON</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4>Follow</h4>
+          <ul class="list">
+            <li><a href="https://www.instagram.com/blindsfactoryca/" rel="me">Instagram</a></li>
+            <li><a href="https://www.facebook.com/blindsfactory.ca/" rel="me">Facebook</a></li>
+            <li><a href="https://www.youtube.com/@BlindsFactoryca" rel="me">YouTube</a></li>
           </ul>
         </div>
       </div>
