--- a/products/index.html
+++ b/products/index.html
@@ -50,6 +50,26 @@
             <h3>Shutters</h3>
             <p>Classic style with excellent insulation and durability.</p>
           </a>
+          <a class="card" href="/products/honeycomb.html">
+            <img src="/assets/images/roller.svg" alt="Honeycomb Shades" loading="lazy" width="320" height="220" />
+            <h3>Honeycomb</h3>
+            <p>Energy‑efficient cellular shades with great insulation.</p>
+          </a>
+          <a class="card" href="/products/roman.html">
+            <img src="/assets/images/roller.svg" alt="Roman Shades" loading="lazy" width="320" height="220" />
+            <h3>Roman Shades</h3>
+            <p>Soft, elegant fabric folds for a refined look.</p>
+          </a>
+          <a class="card" href="/products/shangri-la.html">
+            <img src="/assets/images/zebra.svg" alt="Shangri-La Shades" loading="lazy" width="320" height="220" />
+            <h3>Shangri‑La</h3>
+            <p>Sheer fabric vanes that appear to float between layers.</p>
+          </a>
+          <a class="card" href="/products/galaxy.html">
+            <img src="/assets/images/roller.svg" alt="Galaxy Shades" loading="lazy" width="320" height="220" />
+            <h3>Galaxy</h3>
+            <p>Premium fabrics with sophisticated light control.</p>
+          </a>
         </div>
       </div>
     </main>
