--- a/products/honeycomb.html
+++ b/products/honeycomb.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Roller Shades | Blinds Factory</title>
-    <meta name="description" content="Custom roller shades with blackout and light-filtering fabrics. Professionally measured and installed across the GTA." />
+    <title>Honeycomb Shades | Blinds Factory</title>
+    <meta name="description" content="Energy-efficient cellular honeycomb shades for insulation and light control. Professional measurement and installation across the GTA." />
     <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
@@ -22,23 +22,20 @@
         </ul>
       </nav>
     </div></header>
-
     <main id="main" class="content">
       <div class="container">
-        <nav class="breadcrumb"><a href="/products/">Products</a> / Roller Shades</nav>
-        <h1>Roller Shades</h1>
-        <p class="lead">Modern, minimalist, and highly functional with options from sheer to blackout.</p>
+        <nav class="breadcrumb"><a href="/products/">Products</a> / Honeycomb Shades</nav>
+        <h1>Honeycomb Shades</h1>
+        <p class="lead">Cellular construction that traps air to improve insulation and comfort year‑round.</p>
         <div class="grid-2 gap-lg">
-          <div>
-            <img class="rounded" src="/assets/images/roller-detail.svg" alt="Roller shade close-up" loading="lazy" width="640" height="420" />
-          </div>
+          <div><img class="rounded" src="/assets/images/roller-detail.svg" alt="Honeycomb shade detail" loading="lazy" width="640" height="420" /></div>
           <div>
             <h2>Features</h2>
             <ul class="check">
-              <li>Light-filtering to full blackout fabrics</li>
-              <li>UV protection and privacy options</li>
-              <li>Chain, cordless, and motorized controls</li>
-              <li>Valances and fascia for a clean finish</li>
+              <li>Single, double, and blackout cells</li>
+              <li>Top‑down/bottom‑up and cordless options</li>
+              <li>Excellent energy efficiency and privacy</li>
+              <li>Wide range of colors and textures</li>
             </ul>
             <div class="actions">
               <a class="btn primary" href="/contact.html">Get a Free Quote</a>
@@ -48,10 +45,10 @@
         </div>
       </div>
     </main>
-
     <footer class="site-footer"><div class="container row between top">
       <div><img src="/assets/images/logo.svg" alt="Blinds Factory" width="132" height="28" /><p class="small">© <span id="year"></span> Blinds Factory</p></div>
       <div><h4>Contact</h4><ul class="list"><li><a href="tel:+14375002209">+1 (437) 500‑2209</a></li><li><a href="mailto:info@blindsfactory.ca">info@blindsfactory.ca</a></li></ul></div>
     </div><script src="/assets/js/main.js" defer></script></footer>
   </body>
   </html>
+
